# ISEL_ML

./: Project_A.pptx  README.md  main.py  pyproject.toml  requirements.txt  run_app.bat  run_main.bat
data/: dataset.tab  lenses_dataset.tab  r1_dataset.tab
docs/: documentation.md  domain.md
graphics/: ER_diagram.drawio
orange/: schema.ows
scripts/: dataset.py  id3_model.py  main.py  naive_bayes_model.py  r1_model.py
sql/: create_tables.sql  export_models.sql  export_orange.sql  export_r1.sql  populate_tables.sql
src/: config.py  database_manager.py  dataset.py  evaluation.py  id3_model.py  main.py  models.py  naive_bayes_model.py  r1_model.py
webapp/: app.py
webapp/templates/: index.html
