[project]
name = "kikoff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.1",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "python-multipart>=0.0.20",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
